tests/bc_interpreter/err_duplicate_function.expected
<string>:4:5: error: symbol main already defined in this scope
fun main(a) {
    ^^^^