tests/bc_interpreter/err_duplicate_function.nx
fun main() {
}

fun main(a) {
}